wxc/include/ewxw/wxc_glue.h



/* wxBitmapButton */
TClassDefExtend(wxBitmapButton,wxButton)
TClass(wxBitmapButton) wxBitmapButton_Create( TClass(wxWindow) _prt, int _id, TClass(wxBitmap) _bmp, TRect(_lft,_top,_wdt,_hgt), int _stl );

void       wxBitmapButton_GetBitmapDisabled( TSelf(wxBitmapButton) _obj, TClassRef(wxBitmap) _ref );

void       wxBitmapButton_GetBitmapFocus( TSelf(wxBitmapButton) _obj, TClassRef(wxBitmap) _ref );

void       wxBitmapButton_GetBitmapLabel( TSelf(wxBitmapButton) _obj, TClassRef(wxBitmap) _ref );

void       wxBitmapButton_GetBitmapSelected( TSelf(wxBitmapButton) _obj, TClassRef(wxBitmap) _ref );

int        wxBitmapButton_GetMarginX( TSelf(wxBitmapButton) _obj );

int        wxBitmapButton_GetMarginY( TSelf(wxBitmapButton) _obj );

void       wxBitmapButton_SetBitmapDisabled( TSelf(wxBitmapButton) _obj, TClass(wxBitmap) disabled );

void       wxBitmapButton_SetBitmapFocus( TSelf(wxBitmapButton) _obj, TClass(wxBitmap) focus );

void       wxBitmapButton_SetBitmapLabel( TSelf(wxBitmapButton) _obj, TClass(wxBitmap) bitmap );

void       wxBitmapButton_SetBitmapSelected( TSelf(wxBitmapButton) _obj, TClass(wxBitmap) sel );

void       wxBitmapButton_SetMargins( TSelf(wxBitmapButton) _obj, TPoint(x,y) );


/* wxButton */
TClassDefExtend(wxButton,wxControl)
TClass(wxButton) wxButton_Create( TClass(wxWindow) _prt, int _id, TString _txt, TRect(_lft,_top,_wdt,_hgt), int _stl );

int        wxButton_SetBackgroundColour( TSelf(wxButton) _obj, TClass(wxColour) colour );

void       wxButton_SetDefault( TSelf(wxButton) _obj );